yml.rep/container-registry/ingress.add.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: container-registry-rule
  namespace: container-registry

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /registry
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
